# speedbeaver

./: README.md  SUMMARY.md  hello.py  pyproject.toml  speedbeaver-tui
.github/workflows/: release.yml  testing.yml
docs/: SUMMARY.md
docs/api/common/: index.md  log-level.md
docs/api/config/: index.md
docs/api/handlers/: index.md
docs/api/methods/: index.md
docs/api/middleware/: index.md
docs/api/processor-collection-builder/: index.md
docs/cookbook/: production-setup.md
docs/guides/: async.md  configuring.md  env-vars.md  install.md  log-levels.md
examples/: env_vars.py  hello_world.py  uncaught_error.py
go-tui/: go.mod  go.sum  main.go
speedbeaver/: __init__.py  config.py  handlers.py  methods.py  middleware.py  opentelemetry.py  processor_collection_builder.py
structlog_fastapi/: __init__.py  config.py  methods.py  middleware.py  processor_collection_builder.py
tests/: conftest.py
tests/examples/: test_hello_world.py  test_uncaught_error.py
